; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_cg3.c_cg3_ioctl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/extr_cg3.c_cg3_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fb_info = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@FBTYPE_SUN3COLOR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fb_info*, i32, i64)* @cg3_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cg3_ioctl(%struct.fb_info* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.fb_info*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.fb_info* %0, %struct.fb_info** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = load i64, i64* %6, align 8
  %9 = load %struct.fb_info*, %struct.fb_info** %4, align 8
  %10 = load i32, i32* @FBTYPE_SUN3COLOR, align 4
  %11 = load %struct.fb_info*, %struct.fb_info** %4, align 8
  %12 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @sbusfb_ioctl_helper(i32 %7, i64 %8, %struct.fb_info* %9, i32 %10, i32 8, i32 %14)
  ret i32 %15
}

declare dso_local i32 @sbusfb_ioctl_helper(i32, i64, %struct.fb_info*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
